--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.0.4",
+    "@portabletext/react": "^3.0.11",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "next-sanity": "^7.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "sharp": "^0.33.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
