--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/third-parties": "^14.0.4",
     "@portabletext/react": "^3.0.11",
+    "@sanity/vision": "^3.21.1",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-sanity": "^7.0.3",
